mongodb and mongoose added with working routes

--- a/views/partials/cube.hbs
+++ b/views/partials/cube.hbs
@@ -1,10 +1,10 @@
 <div>
-    {{#each cubeData}}
+    {{#each cube}}
     <div class="cube">
         <img class="cube" src="{{imageUrl}}" alt="{{name}}">
         <p class="name">{{name}}</p>
         <p name="Difficulty"><span>Difficulty level:</span>{{difficultyLevel}}</p>
-        <a class="btn" href="/details/:{{id}}">Details</a>
+        <a class="btn" href="/details/{{_id}}">Details</a>
     </div>
     {{/each}}
 </div>
