--- a/views/about.hbs
+++ b/views/about.hbs
@@ -3,10 +3,11 @@
   <div class="about">
     <p>
       <i>"Cubicle"</i> is a place, where you can browse some of the most popular rubik cubes in the world and add
-      some new cubes that
-      you have discovered. This application was created as an exercise for the <a
-        href="https://softuni.bg/trainings/2452/js-back-end-september-2019">JS Back-End course</a> at the
-      <a href="https://softuni.bg/">Software University</a>.</p>
+      some new cubes that you have discovered.
+    </p>
   </div>
+  <p align="center">
+    <img src="https://thumbs.gfycat.com/DisguisedThoroughBarnswallow-size_restricted.gif">
+  </p>
 </main>
   
