--- a/views/details.hbs
+++ b/views/details.hbs
@@ -1,9 +1,9 @@
 <main>
-  <h1>{{cubeData.name}}</h1>
-  <img class="cube" src="{{cubeData.imageUrl}}">
+  <h1>{{cube.name}}</h1>
+  <img class="cube" src="{{cube.imageUrl}}">
   <div class="details">
-    <p><span>Description:</span>{{cubeData.description}}</p>
-    <p><span>Difficulty level:</span>{{cubeData.difficultyLevel}}</p>
+    <p><span>Description:</span>{{cube.description}}</p>
+    <p><span>Difficulty level:</span>{{cube.difficultyLevel}}</p>
     <a class="btn" href="/">Back</a>
   </div>
 </main>
