attach GET working

--- a/views/details.hbs
+++ b/views/details.hbs
@@ -5,5 +5,22 @@
     <p><span>Description:</span>{{cube.description}}</p>
     <p><span>Difficulty level:</span>{{cube.difficultyLevel}}</p>
     <a class="btn" href="/">Back</a>
+    <a class="btn" href="/create/accessory/{{cube._id}}">Attach</a>
   </div>
+  
+  {{#if accessory}}
+      {{#each accessory}}
+        <h2>Accessories</h2>
+        <div class="accessories">
+          <div class="accessory">
+              <img src="{{imageUrl}}" alt="stickerName">
+            <h3>{{name}}</h3>
+            <p>{{description}}</p>
+          </div>
+        </div>
+      {{/each}}
+    {{else}} 
+    <h3 class="italic">This cube has no accessories yet...</h3>
+  {{/if}}
+
 </main>
