--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,1 +1,1 @@
-<footer>@Cubicle: Demonstrate Express.js and Handlebars functionality</footer>
+<footer>Cubicle: Built with Express.js and Handlebars</footer>
