--- a/views/details.hbs
+++ b/views/details.hbs
@@ -9,8 +9,9 @@
   </div>
   
   {{#if accessory}}
+  <h2>Accessories</h2>
       {{#each accessory}}
-        <h2>Accessories</h2>
+      <div class='flex-container'>
         <div class="accessories">
           <div class="accessory">
               <img src="{{imageUrl}}" alt="stickerName">
@@ -18,6 +19,7 @@
             <p>{{description}}</p>
           </div>
         </div>
+      </div>
       {{/each}}
     {{else}} 
     <h3 class="italic">This cube has no accessories yet...</h3>
