--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -2,8 +2,14 @@
     <ul>
         <li><img class="logo" src="/images/logo.png"></li>
         <li><a href="/">Browse</a></li>
+        {{#if loggedIn}}
         <li><a href="/create">Add a Cube</a></li>
         <li><a href="/create/accessory">Add Accessory</a></li>
+        {{else}}
         <li><a href="/about">About</a></li>
+        <li><a href="/login">Login</a></li>
+        <li><a href="/register">Register</a></li>
+        {{/if}}
+        
     </ul>
 </header>
